--- a/web/index.html
+++ b/web/index.html
@@ -1,41 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%;margin:0;">
 <head>
-
-<!-- include the core Blockly script and the core blocks set -->
-<script src="../blockly/blockly_compressed.js"></script>
-<script src="../blockly/blocks_compressed.js"></script>
-
-<!-- include the messages for the user's language -->
-<script src="../blockly/msg/js/en.js"></script>
-
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+    }
+    body {
+      background-color: #fff;
+      font-family: sans-serif;
+      overflow: hidden;
+    }
+    h1 {
+      font-weight: normal;
+      font-size: 140%;
+    }
+    table {
+      height: 100%;
+      width: 100%;
+    }
+    #blocklyArea {
+      height: 99%;
+    }
+  </style>
+  <script src="../blockly/blockly_compressed.js"></script>
+  <script src="../blockly/blocks_compressed.js"></script>
+  <script src="blocks.js"></script>
+  <script src="../blockly/msg/js/en.js"></script>
 </head>
-
 <body>
+  <table>
+    <tr>
+      <td id="blocklyArea">
+      </td>
+    </tr>
+  </table>
 
-<!-- an empty div -->
-<div id="blocklyDiv" style="height:480px;width:699px"></div>
+  <div id="blocklyDiv" style="position: absolute"></div>
 
-<!-- structre of the toolbox -->
-<xml id="toolbox" style="display:none">
-  <block type="controls_if"></block>
-  <block type="controls_repeat_ext"></block>
-  <block type="logic_compare"></block>
-  <block type="math_number"></block>
-  <block type="math_arithmetic"></block>
-  <block type="text"></block>
-  <block type="text_print"></block>
-</xml>
+  <xml id="toolbox" style="display: none">
+    <category name="Math">
+      <block type="math_number_zz"></block>
+      <block type="tmp_zz"></block>
+    </category>
+    <sep></sep>
+    <category name="Action">
+      <block type="action_move_forward_zz"></block>
+      <block type="action_move_backward_zz"></block>
+      <block type="action_turn_left_zz"></block>
+      <block type="action_turn_right_zz"></block>
+    </category>
+  </xml>
+  <script>
+    var blocklyArea = document.getElementById('blocklyArea');
+    var blocklyDiv = document.getElementById('blocklyDiv');
+    var workspace = Blockly.inject(blocklyDiv,
+        {media: '../blockly/media/',
+         toolbox: document.getElementById('toolbox')});
+    var onresize = function(e) {
+      // Compute the absolute coordinates and dimensions of blocklyArea.
+      var element = blocklyArea;
+      var x = 0;
+      var y = 0;
+      do {
+        x += element.offsetLeft;
+        y += element.offsetTop;
+        element = element.offsetParent;
+      } while (element);
+      // Position blocklyDiv over blocklyArea.
+      blocklyDiv.style.left = x + 'px';
+      blocklyDiv.style.top = y + 'px';
+      blocklyDiv.style.width = blocklyArea.offsetWidth + 'px';
+      blocklyDiv.style.height = blocklyArea.offsetHeight + 'px';
+    };
+    window.addEventListener('resize', onresize, false);
+    onresize();
 
-<!-- inject Blockly into the empty div -->
-<script>
-  var workspace = Blockly.inject('blocklyDiv',
-      {media: '../blockly/media/',
-       toolbox: document.getElementById('toolbox')});
-</script>
+//----------------------------------------------------
+    function showCode() {
+      var code = zz.workspaceToCode(workspace);
+      alert(code);
+    }
 
-<p>
- <a href=./indextest.html>another ver</a>
-</p>
+
+//----------------------------------------------------
+  </script>
 </body>
 </html>
