--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
   </style>
   <script src="../blockly/blockly_compressed.js"></script>
   <script src="../blockly/blocks_compressed.js"></script>
-  <script src="blocks.js"></script>
+  <script src="../blockly/blocks/actions.js"></script>
   <script src="../blockly/msg/js/en.js"></script>
 </head>
 <body>
@@ -58,7 +58,7 @@
     </category>
   </xml>
 
-  <script src = "c_avr_generator.js"></script>
+  <script src = "../blockly/generators/c.js"></script>
   <script>
     var blocklyArea = document.getElementById('blocklyArea');
     var blocklyDiv = document.getElementById('blocklyDiv');
