--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html style="height:100%;margin:0;">
 <head>
+  <meta charset="utf-8">
+  <title>blockavr</title>
   <style>
     html, body {
       height: 100%;
@@ -25,8 +27,9 @@
   </style>
   <script src="../blockly/blockly_compressed.js"></script>
   <script src="../blockly/blocks_compressed.js"></script>
-  <script src="../blockly/blocks/actions.js"></script>
   <script src="../blockly/msg/js/en.js"></script>
+  <script src="../blockly/blocks/avr_actions.js"></script>
+  <script src="../blockly/blocks/avr_misc.js"></script>
 </head>
 <body>
   <table>
@@ -43,22 +46,57 @@
   <div id="blocklyDiv" style="position: absolute"></div>
 
   <xml id="toolbox" style="display: none">
-    <category name="Math">
-      <block type="math_number_zz"></block>
-      <block type="tmp_zz"></block>
+    <category name="Logic">
+      <category name = "if">
+        <block type="controls_if"></block>
+        <block type="controls_if"><mutation else = "1"></mutation></block>
+        <block type="controls_if"><mutation elseif="1" else="1"></mutation></block>
+      </category>
+      <category name = "boolean">
+        <block type="logic_compare"></block>
+        <block type="logic_operation"></block>
+        <block type="logic_negate"></block>
+        <block type="logic_boolean"></block>
+        <block type="logic_null"></block>
+        <block type="logic_ternary"></block>
+      </category>
     </category>
-    <category name="procedure" custom="PROCEDURE"></category>
-    <category name="variables" custom="VARIABLE"></category>
+    <category name="Loops">
+      <block type="controls_repeat_ext"></block>
+      <block type="controls_whileUntil"></block>
+      <block type="controls_for"></block>
+      <block type="controls_flow_statements"></block>
+    </category>
+    <category name="Math">
+      <block type="math_number"></block>
+      <block type="math_arithmetic"></block>
+    </category>
     <sep></sep>
-    <category name="Action">
-      <block type="action_move_forward_zz"></block>
-      <block type="action_move_backward_zz"></block>
-      <block type="action_turn_left_zz"></block>
-      <block type="action_turn_right_zz"></block>
+    <category name="Procedure" custom="PROCEDURE"></category>
+    <category name="Variables" custom="VARIABLE"></category>
+    <sep></sep>
+    <category name="Avr">
+      <category name="Misc">
+      </category>
+      <category name="Pins">
+      </category>
+      <category name="Actions">
+        <block type="avr_action_move_forward"></block>
+        <block type="avr_action_move_backward"></block>
+        <block type="avr_action_turn_left"></block>
+        <block type="avr_action_turn_right"></block>
+        <block type="avr_action_init"></block>
+      </category>
     </category>
   </xml>
 
   <script src = "../blockly/generators/c.js"></script>
+  <script src = "../blockly/generators/c/variables.js"></script>
+  <script src = "../blockly/generators/c/procedures.js"></script>
+  <script src = "../blockly/generators/c/logic.js"></script>
+  <script src = "../blockly/generators/c/loops.js"></script>
+  <script src = "../blockly/generators/c/math.js"></script>
+  <script src = "../blockly/generators/c/avr_actions.js"></script>
   <script>
     var blocklyArea = document.getElementById('blocklyArea');
     var blocklyDiv = document.getElementById('blocklyDiv');
@@ -88,7 +126,6 @@
     function showCode() {
       Blockly.C.DEBUG = 0;
       var code = Blockly.C.workspaceToCode(workspace);
-      //var code = "shit";
       alert(code);
     }
 
