--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,7 @@
     //----------------------------------------------------
     function showCode() {
       Blockly.C.DEBUG = 0;
+      Blockly.C.STATEMENT_PREFIX = "debug(%1);\n";
       var code = Blockly.C.workspaceToCode(workspace);
       alert(code);
     }
@@ -56,16 +57,18 @@
     }
 
     function up(){
-      var xmlhttp = new XMLHttpRequest();
-      xmlhttp.open("POST","/stepa",false);
-      xmlhttp.send("code='a'");
-      //xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-      //xmlhttp.send("code=" + encodeURIComponent('a'));
+      //var xmlhttp = new XMLHttpRequest();
+      //xmlhttp.open("POST","/stepa",false);
+      //xmlhttp.send("code='a'");
+      workspace.highlightBlock('6');
+      workspace.getBlockById('6').select();
     }
     function down(){
-      var xmlhttp = new XMLHttpRequest();
-      xmlhttp.open("POST","/stepb",false);
-      xmlhttp.send("code='b'");
+      //var xmlhttp = new XMLHttpRequest();
+      //xmlhttp.open("POST","/stepb",false);
+      //xmlhttp.send("code='b'");
+      workspace.highlightBlock('12');
+      workspace.getBlockById('12').select();
     }
   </script>
 
