--- a/web/index.html
+++ b/web/index.html
@@ -36,7 +36,7 @@
     function showCode() {
       Blockly.C.DEBUG = 1;
       Blockly.C.STATEMENT_PREFIX = "\nblock(%1);\n";
-      Blockly.C.STATEMENT_PREFIX.replace("'",'"');
+      //Blockly.C.STATEMENT_PREFIX.replace("'",'"');
       var code = Blockly.C.workspaceToCode(workspace);
       alert(code);
     }
@@ -49,12 +49,25 @@
 
     function download(){
       Blockly.C.DEBUG = 1;
+      Blockly.C.STATEMENT_PREFIX = "\nblock(%1);\n";
       var code = Blockly.C.workspaceToCode(workspace);
       var xmlhttp=new XMLHttpRequest();
-      xmlhttp.open("POST","/upload",false);
+      xmlhttp.open("POST","/download",false);
       xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
       xmlhttp.send("code=" + encodeURIComponent(code));
       alert(xmlhttp.responseText);
+    }
+
+    function step(){
+      var xmlhttp = new XMLHttpRequest();
+      xmlhttp.open("POST","/step",false);
+      //xmlhttp.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+      //xmlhttp.send("code=" + encodeURIComponent(code));
+      xmlhttp.send(" ");
+      var stopid = xmlhttp.responseText;
+      workspace.highlightBlock(stopid);
+	  alert(stopid);
+      workspace.getBlockById(stopid).select();
     }
 
     function up(){
@@ -64,12 +77,12 @@
       workspace.highlightBlock('6');
       workspace.getBlockById('6').select();
     }
-    function down(){
-      //var xmlhttp = new XMLHttpRequest();
-      //xmlhttp.open("POST","/stepb",false);
-      //xmlhttp.send("code='b'");
-      workspace.highlightBlock('12');
-      workspace.getBlockById('12').select();
+    function blue_connect(){
+      var xmlhttp = new XMLHttpRequest();
+      xmlhttp.open("POST","/conn_blue",false);
+      xmlhttp.send(" ");
+      //workspace.highlightBlock('12');
+      //workspace.getBlockById('12').select();
     }
   </script>
 
@@ -77,10 +90,10 @@
 <body>
   <table>
     <tr>
-      <button onclick="download()">upload</button>
       <button onclick="showCode()">code</button>
-      <button onclick="up()">send a</button>
-      <button onclick="down()">send b</button>
+      <button onclick="download()">upload</button>
+      <button onclick="blue_connect()">connect</button>
+      <button onclick="step()">step</button>
     </tr>
     <tr>
       <td id="blocklyArea">
@@ -126,6 +139,7 @@
       <category name="Pins">
       </category>
       <category name="Actions">
+        <block type="avr_action_blink"></block>
         <block type="avr_action_move_forward"></block>
         <block type="avr_action_move_backward"></block>
         <block type="avr_action_turn_left"></block>
