--- a/web/index.html
+++ b/web/index.html
@@ -67,6 +67,7 @@
       var stopid = xmlhttp.responseText;
       workspace.highlightBlock(stopid);
 	  alert(stopid);
+      //workspace.highlightBlock('6');
       workspace.getBlockById(stopid).select();
     }
 
